--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section class="hero" id="hero" role="banner" aria-label="Welcome">
     <div class="hero-content on-dark">
       <h1>Empowerment Ministries International</h1>
-      <p>Winning souls. We believe in God changing lives.</p>
+      <p>To see souls saved, make disciples.</p>
       <ul class="hero-chips">
         <li>Sundays 9:00 & 10:30</li>
         <li>Bloemfontein & Welkom</li>
@@ -76,6 +76,16 @@
     <p>
       Empowerment Ministries International (EMI) is a Christ-centered movement dedicated to raising leaders, strengthening families, and reaching nations with the transformative power of the Gospel.
     </p>
+    <div class="visit-grid container" style="margin-top:1rem;">
+      <div class="card">
+        <h3>Mission</h3>
+        <p class="muted">To see souls saved, make disciples.</p>
+      </div>
+      <div class="card">
+        <h3>Vision</h3>
+        <p class="muted">To see souls saved, discipled, serving in ministry and empowered to prosper in all aspects of their lives.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Visit -->
